--- a/Continuum/Resources/Info.plist
+++ b/Continuum/Resources/Info.plist
@@ -20,6 +20,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>We use your camera to allow you to take and post pictures right in the app</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We acces your photos to allow you to select and upload pictures to the Continuum feed</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,9 +49,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>We use your camera to allow you to take and post pictures right in the app</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We acces your photos to allow you to select and upload pictures to the Continuum feed</string>
 </dict>
 </plist>
